--- a/jhotdraw-samples/jhotdraw-samples-misc/pom.xml
+++ b/jhotdraw-samples/jhotdraw-samples-misc/pom.xml
@@ -6,6 +6,7 @@
 		<artifactId>jhotdraw-samples</artifactId>
 		<version>9.1-SNAPSHOT</version>
 	</parent>
+
 	<artifactId>jhotdraw-samples-misc</artifactId>
 	<packaging>jar</packaging>
 	<dependencies>
@@ -20,9 +21,14 @@
 			<version>7.3.4</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sourceforge.htmlunit</groupId>
-			<artifactId>htmlunit</artifactId>
-			<version>2.37.0</version>
+			<groupId>dk.sdu.mmmi</groupId>
+			<artifactId>featuretracer</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.9</version>
 		</dependency>
 	 <dependency>
 	  <groupId>${project.groupId}</groupId>
